--- a/src/templates/layout/layout--news.tmpl
+++ b/src/templates/layout/layout--news.tmpl
@@ -22,7 +22,9 @@
   </div>
 
   <div class="Grid-cell u-sizeFull u-md-size1of2 u-lg-size1of2 u-text-r-s u-padding-r-all">
-    <img src="//placehold.it/680x480?text=placeholder" class="u-sizeFull" alt="..." />
+    <a href="">
+      <img src="//placehold.it/680x480?text=placeholder" class="u-sizeFull" alt="..." />
+     </a>
   </div>
 
 </section>
